2016-01-21  Edward Jones  <ed.jones@embecosm.com>

	* GCCCallbacks.cpp: Add more debug.
	* GCCPlugin.cpp: Likewise.

2016-01-20  Edward Jones  <ed.jones@embecosm.com>

	* GCCCallbacks.cpp (extractModuleFeatures): Stub implementation to
	derive module level features from the function.
	(mageecFinishFile): Extract features for the module if all of the
	constituent functions have the same compiler configuration.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* GCCCallbacks.cpp: Fix gcc warnings and errors.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Inherit MAGEEC_WITH_DEBUG from the main project
	build. Add more diagnostics when searching for the gcc plugin
	headers.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* FeatureExtract.cpp: Use Attribute/AttributeSet headers instead of
	the (now removed) Feature/Parameter, FeatureSet/ParameterSet headers.
	* GCCPlugin.cpp: Likewise.
	* MAGEECPlugin.h: Likewise.

2016-01-12  Edward Jones  <ed.jones@embecosm.com>

	* GCCCallbacks.cpp (mageecFinishFile): Emit compilation ids for
	functions into the output file.
	* GCCPlugin.cpp (parseArguments): Add out-file argument to the
	plugin to specify where compilation ids should be stored.
	Only print the db_version if asked to.
	* MAGEECPlugin.h (MAGEECContext::out_file): Add member to hold
	handle to the file to output compilation ids to.

2016-01-12  Edward Jones  <ed.jones@embecosm.com>

	* FeatureExtract.cpp: File formatted with clang-format.
	* Features.h: Likewise.
	* GCCCallbacks.cpp: Likewise.
	* GCCPlugin.cpp: Likewise.
	* MAGEECPlugin.h: Likewise.

2016-01-12  Edward Jones  <ed.jones@embecosm.com>

	* FeatureExtract.cpp: Make header include order consistent.
	* GCCCallbacks.cpp: Likewise.
	* GCCPlugin.cpp: Likewise.
	* MAGEECPlugin.h: Likewise.

2016-01-12  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Remove PluginInfo.cpp from files to build.
	* GCCPlugin.cpp (mageec_plugin_version): Added global to track the